Fixed the alignment for index.html.

--- a/Website/style.css
+++ b/Website/style.css
@@ -110,7 +110,7 @@ h2{
 table {
 	margin-top: 0em;
 	margin-bottom: 0em;
-	margin-left: 60px;
+	margin-left: 70px;
 	padding-top:20px;
 	font-size: 20px;
     opacity: 1.0;
